data/forge_javadoc/1.7.10/raw/net/minecraft/client/model/ModelIronGolem.md
---
title: "ModelIronGolem"
description: "public class ModelIronGolem extends ModelBase"
package: "net/minecraft/client/model"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/model/ModelIronGolem.html"
sourceType: javadoc
---

# ModelIronGolem

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelIronGolem

## Class signature

```java
public class ModelIronGolem extends ModelBase
```

## Constructors

- `ModelIronGolem()`
- `ModelIronGolem(float p_i1161_1_)`
- `ModelIronGolem(float p_i1162_1_, float p_i1162_2_)`

## Methods

- `void render(Entity p_78088_1_, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float p_78088_7_)`
- `void setLivingAnimations(EntityLivingBase p_78086_1_, float p_78086_2_, float p_78086_3_, float p_78086_4_)`
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity p_78087_7_)`

## Fields

- `ModelRenderer ironGolemBody`
- `ModelRenderer ironGolemHead`
- `ModelRenderer ironGolemLeftArm`
- `ModelRenderer ironGolemLeftLeg`
- `ModelRenderer ironGolemRightArm`
- `ModelRenderer ironGolemRightLeg`
