data/forge_javadoc/1.8.9/raw/net/minecraft/client/model/ModelIronGolem.md
---
title: "ModelIronGolem"
description: "public class ModelIronGolem extends ModelBase"
package: "net/minecraft/client/model"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/model/ModelIronGolem.html"
sourceType: javadoc
---

# ModelIronGolem

**Inheritance:** java.lang.Object → net.minecraft.client.model.ModelBase → net.minecraft.client.model.ModelIronGolem

## Class signature

```java
public class ModelIronGolem extends ModelBase
```

## Constructors

- `ModelIronGolem()`
- `ModelIronGolem(float p_i1161_1_)`
- `ModelIronGolem(float p_i46362_1_, float p_i46362_2_)`

## Methods

- `void render(Entity entityIn, float p_78088_2_, float p_78088_3_, float p_78088_4_, float p_78088_5_, float p_78088_6_, float scale)` — Sets the models various rotation angles then renders the model.
- `void setLivingAnimations(EntityLivingBase entitylivingbaseIn, float p_78086_2_, float p_78086_3_, float partialTickTime)` — Used for easily adding entity-dependent animations.
- `void setRotationAngles(float p_78087_1_, float p_78087_2_, float p_78087_3_, float p_78087_4_, float p_78087_5_, float p_78087_6_, Entity entityIn)` — Sets the model's various rotation angles.

## Fields

- `ModelRenderer ironGolemBody` — The body model for the iron golem.
- `ModelRenderer ironGolemHead` — The head model for the iron golem.
- `ModelRenderer ironGolemLeftArm` — The left arm model for the iron golem.
- `ModelRenderer ironGolemLeftLeg` — The left leg model for the Iron Golem.
- `ModelRenderer ironGolemRightArm` — The right arm model for the iron golem.
- `ModelRenderer ironGolemRightLeg` — The right leg model for the Iron Golem.
